<resources>
    <string name="menu_lock">Lock</string>
    <string name="menu_unlock">Unlock</string>
    <string name="app_name">Sono团购</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="pull_to_refresh_pull_label">下拉刷新…</string>
    <string name="pull_to_refresh_release_label">松开即可刷新…</string>
    <string name="pull_to_refresh_refreshing_label">加载中…</string>
    <string name="more">更多</string>
    <string name="my_la_shou">我的拉手</string>
    <string name="nearby">周边</string>
    <string name="retrive_date_failed">数据获取失败，点击重试</string>
    <string name="blank" />
    <string name="weibosdk_demo_toast_auth_success">授权成功</string>
    <string name="weibosdk_demo_toast_auth_failed">授权失败</string>
    <string name="weibosdk_demo_toast_auth_canceled">取消授权</string>
    <string name="errcode_success">发送成功</string>
    <string name="errcode_cancel">发送取消</string>
    <string name="errcode_deny">发送被拒绝</string>
    <string name="errcode_unknown">发送返回</string>
    <string name="share_settings">分享设置</string>
    <string name="share_settings_sina">微博</string>
    <string name="share_settings_tenxun">腾讯微博</string>
    <string name="share_settings_dounbind">解除绑定</string>
    <string name="share_settings_unbind">未绑定</string>
    <string name="button_ok">确定</string>
    <string name="button_cancel">取消</string>
    <string name="pull_to_refresh_loadmore">加载中…</string>
    <string name="pull_to_refresh_all">已显示全部</string>
    <string name="pull_to_refresh_from_bottom_pull_label">@string/pull_to_refresh_pull_label</string>
    <string name="pull_to_refresh_from_bottom_release_label">@string/pull_to_refresh_release_label</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label">@string/pull_to_refresh_refreshing_label</string>
    <string name="mini_env_pre">false</string>
    <string name="mini_http_url">http://mcgw.alipay.com/gateway.do</string>
    <string name="mini_debuglog">false</string>
    <string name="msp_str_null" />
    <string name="msp_app_name">支付宝快捷支付服务</string>
    <string name="msp_loading_default">加载中</string>
    <string name="msp_redo">重试</string>
    <string name="msp_error_title_default">提示</string>
    <string name="msp_net_error">不能连接到网络，是否重试？</string>
    <string name="msp_net_error_exit">系统繁忙，请稍后再试。</string>
    <string name="msp_action_settings">设置</string>
    <string name="msp_xlistview_header_hint_normal">下拉刷新</string>
    <string name="msp_xlistview_header_hint_ready">松开刷新数据</string>
    <string name="msp_xlistview_header_hint_loading">正在加载…</string>
    <string name="msp_xlistview_header_last_time">上次更新时间：</string>
    <string name="msp_xlistview_footer_hint_normal">查看更多</string>
    <string name="msp_xlistview_footer_hint_ready">松开载入更多</string>
    <string name="msp_xlistview_footer_hint_no_more">已是全部数据</string>
    <string name="msp_allow_back_hint">本次支付尚未完成，是否退出支付宝快捷支付服务？</string>
    <string name="msp_confirm_install_hint">升级提示</string>
    <string name="msp_download_fail">下载安装包失败，是否重新下载？</string>
    <string name="msp_install_continue">安装尚未完成，是否继续？</string>
    <string name="msp_exit">退出</string>
    <string name="msp_channel_state">当前选中已足够付款</string>
    <string name="msp_close">关闭</string>
    <string name="msp_on">开</string>
    <string name="msp_off">关</string>
    <string name="msp_memo_user_cancel">操作已经取消。</string>
    <string name="msp_memo_app_cancel">程序或者数据出现问题。</string>
    <string name="msp_memo_server_cancel">系统繁忙，请稍后再试。</string>
    <string name="msp_app_error">系统繁忙，请稍后再试。</string>
    <string name="msp_please_input">请输入</string>
    <string name="msp_memo_repeat_pay">同一订单禁止同时多次支付。</string>
    <string name="msp_alert_title">提示</string>
    <string name="msp_PermissionDesCription">service for alipay application</string>
    <string name="msp_debug_app_error">程序发生错误！点击确定退出程序。</string>
    <string name="msp_debug_win_data_error">窗口数据非法。</string>
    <string name="msp_debug_null_data">返回的业务数据为空</string>
    <string name="msp_alert_dialog_title">注意</string>
    <string name="msp_btn_ok">确定</string>
    <string name="msp_update_notify">点击下载更新</string>
    <string name="msp_start_download">开始下载</string>
    <string name="msp_download_progress">下载进度:</string>
    <string name="mini_str_null">xx</string>
    <string name="mini_loading">加载中</string>
    <string name="mini_net_error">不能连接到网络，是否重试？</string>
    <string name="mini_redo">重试</string>
    <string name="mini_cancel">取消</string>
    <string name="mini_error_title_default">提示</string>
    <string name="mini_app_error">系统繁忙，请稍后再试。</string>
    <string name="mini_debug_app_error">程序发生错误！点击确定退出程序。</string>
    <string name="mini_countdown_info">秒后重发</string>
    <string name="mini_no_input">不能为空</string>
    <string name="mini_format_error">格式错误</string>
    <string name="mini_page_add_title">添加银行卡</string>
    <string name="mini_page_add_hint">银行卡号</string>
    <string name="mini_card_no">卡号</string>
    <string name="mini_page_add_tips">提供支付密码和短信验证的双重保障</string>
    <string name="mini_page_add_other_pay">其他付款方式</string>
    <string name="mini_page_msg_title">填写银行卡信息</string>
    <string name="mini_page_next">下一步</string>
    <string name="mini_page_name">姓名</string>
    <string name="mini_page_input_name_hint">持卡人姓名</string>
    <string name="mini_card_type">卡类型</string>
    <string name="mini_id_no">证件号</string>
    <string name="mini_page_input_id_hint">证件号码</string>
    <string name="mini_page_msg_check">信息加密处理，仅用于银行验证</string>
    <string name="mini_page_msg_choose_type">选择证件类型</string>
    <string name="mini_date">有效期</string>
    <string name="mini_date_hint">月份/年份</string>
    <string name="mini_safe_no">安全码</string>
    <string name="mini_safe_no_hint">卡背面末三位数字</string>
    <string name="mini_phone_no">手机号</string>
    <string name="mini_phone_no_hint">银行预留手机号码</string>
    <string name="mini_agree">同意</string>
    <string name="mini_quickpay_protocol">《服务协议》</string>
    <string name="mini_password">密码</string>
    <string name="mini_password_hint">请输入密码</string>
    <string name="mini_weakpassword_error_same">请不要使用相同的数字</string>
    <string name="mini_weakpassword_error_serial">请不要使用连续的数字</string>
    <string name="msp_mini_safty_code_info">安全码是打印在信用卡背面签名区的一组数字，一般是后3位数字</string>
    <string name="msp_mini_safty_code_title">安全码说明</string>
    <string name="msp_mini_read_protocal_title">选择阅读协议</string>
    <string name="msp_mini_choose_identitify">选择证件类别</string>
    <string name="msp_mini_card_type_text">卡类型</string>
    <string name="mini_fp_validate_failuer">指纹校验失败，将转密码支付</string>
    <string name="mini_fp_no_open_pay">你的指纹信息发生变更，请重新开启指纹密码</string>
    <string name="mini_fp_validate_failuer_for">指纹校验失败</string>
    <string name="alipay_net_error">不能连接到服务器，是否重试？</string>
    <string name="alipay_data_error">系统繁忙，请稍后再试</string>
    <string name="alipay_confirm_title">提示</string>
    <string name="alipay_ensure">确定</string>
    <string name="alipay_cancel">取消</string>
    <string name="alipay_processing">加载中</string>
    <string name="alipay_redo">重试</string>
    <string name="alipay_keyboard">正在使用支付宝安全键盘</string>
    <string name="td_home_allFilms">首页_点击全部影片</string>
    <string name="td_home_banner">首页-banner</string>
    <string name="td_home_cate_special_switch">首页-分类与个性化分类切换</string>
    <string name="td_home_city_switch">首页-城市切换</string>
    <string name="td_home_films_showing_select">首页_热映影片选择</string>
    <string name="td_home_look_allgroundbuy">首页-查看全部团购</string>
    <string name="td_home_map">首页-地图</string>
    <string name="td_home_newgoods_category">首页_新单精选</string>
    <string name="td_home_newgoods_select">首页_新单精选商品选择</string>
    <string name="td_home_pullrefresh">首页-下拉刷新</string>
    <string name="td_home_uploading">首页-上拉加载</string>
    <string name="td_home_qr">首页_扫一扫</string>
    <string name="td_home_recomend_select">首页-超值推荐商品选择</string>
    <string name="td_home_recommend_category">首页_猜你喜欢</string>
    <string name="td_home_recommend_select">首页_猜你喜欢商品选择</string>
    <string name="td_home_msg_click">首页-消息按钮点击</string>
    <string name="td_home_search">首页-搜索</string>
    <string name="td_home_seckill">首页_秒杀_图片点击</string>
    <string name="td_home_seckill_more">首页_秒杀_更多点击</string>
    <string name="td_seckill_list_select">秒杀列表_商品选择</string>
    <string name="td_seckill_list_uploading">秒杀列表_上拉加载</string>
    <string name="td_seckill_list_pullrefresh">秒杀列表_下拉刷新</string>
    <string name="td_seckill_list_share">秒杀列表_分享按钮</string>
    <string name="td_home_shake">首页-摇一摇按钮点击</string>
    <string name="td_home_specia_select">首页-专题选择（专题名）</string>
    <string name="td_home_special_category">首页-分类选择/个性化分类（分类名）</string>
    <string name="td_home_special_category_select">首页-超值推荐分类选择（分类名）</string>
    <string name="td_character_back">个性化分类-返回按钮</string>
    <string name="td_character_select">个性化分类-品类分类选择（分类名）</string>
    <string name="td_character_modify_location">个性化分类-当前位置_地址修改</string>
    <string name="td_character_pull_uploading">个性化分类-上拉加载</string>
    <string name="td_character_pull_pullrefresh">个性化分类-下拉刷新</string>
    <string name="td_character_refresh_location">个性化分类-当前位置_刷新按钮点击</string>
    <string name="td_character_replacement">个性化分类-分类更换（右上角切换主题）</string>
    <string name="td_character_select_near">个性化分类-精选/附件选择</string>
    <string name="td_category_back">更多分类-返回</string>
    <string name="td_category_select">更多分类-分类选择（分类名）</string>
    <string name="td_city_back">选择城市页-返回</string>
    <string name="td_city_select_name">选择城市页-普通城市选择（城市名）</string>
    <string name="td_city_hot">选择城市页-热门城市选择（城市名）</string>
    <string name="td_city_location_fail">选择城市页-定位失败</string>
    <string name="td_city_location_name">选择城市页-定位城市选择（城市名）</string>
    <string name="td_city_location_succ">选择城市页-定位成功</string>
    <string name="td_city_recent">选择城市页-最近浏览城市选择（城市名）</string>
    <string name="td_city_refresh">选择城市页-刷新按钮点击</string>
    <string name="td_city_refresh_fail">选择城市页-刷新失败</string>
    <string name="td_city_refresh_succ">选择城市页-刷新成功</string>
    <string name="td_city_search">选择城市页-搜索城市（城市名）</string>
    <string name="td_city_search_name">选择城市页-搜索结果城市选择（城市名）</string>
    <string name="td_search_back">搜索页-返回</string>
    <string name="td_search_clear_history">搜索页-清除全部历史记录点击</string>
    <string name="td_search_goods_click">搜索页-搜索无结果商品点击-iOS</string>
    <string name="td_search_hotwords_click">搜索页-热词点击</string>
    <string name="td_search_hotwords_slide">搜索页-热词区域滑动</string>
    <string name="td_search_result">列表页-搜索结果页商品点击</string>
    <string name="td_search_result_recommand">列表页-搜索无结果页商品点击-Android</string>
    <string name="td_search_searchhistory_click">搜索页-搜索历史点击</string>
    <string name="td_search_suggestWords">搜索页-联想词点击</string>
    <string name="td_push_newgoodslist_select">新单精选-商品点击</string>
    <string name="td_push_newgoodslist_back">新单精选-返回</string>
    <string name="td_list_allshopgoods_expand">列表页-展开本店全部团购</string>
    <string name="consume_date">消费日期</string>
    <string name="switch_consume_date">请选择日期</string>
    <string name="consumer_name">取票人姓名</string>
    <string name="consumer_name_edit">不少于2个字</string>
    <string name="consumer_id">身份证号</string>
    <string name="consumer_id_edit">请输入18位身份证号</string>
    <string name="consumer_phone">取票人手机号</string>
    <string name="consumer_phone_edit">用于接收确认短信</string>
    <string name="use_coupon">使用抵用券</string>
    <string name="submit_order_coupon">抵用券:</string>
    <string name="submit_order_balance">拉手余额:</string>
    <string name="submit_order_input_phone_hint">请输入手机号码</string>
    <string name="submit_order_get_code">获取验证码</string>
    <string name="submit_order_code_hint">请输入手机短信验证码</string>
    <string name="submit_order_had_lashou_account">已有拉手账户，</string>
    <string name="submit_order_login_now">直接登录</string>
    <string name="submit_order_check_picture">验证图片</string>
</resources>