<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/app_white" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="20.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="horizontal" android:background="@color/white" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <EditText android:textSize="16.0sp" android:id="@id/phone_edit" android:background="@drawable/pay_input_phone" android:paddingLeft="10.0dip" android:layout_width="0.0dip" android:layout_height="42.0dip" android:layout_marginRight="5.0dip" android:hint="@string/submit_order_input_phone_hint" android:singleLine="true" android:maxLength="11" android:digits="1234567890" android:layout_weight="1.0" android:inputType="phone" />
        <TextView android:textSize="14.0sp" android:textColor="@color/white" android:gravity="center" android:layout_gravity="center_vertical" android:id="@id/get_code_tv" android:background="@drawable/selector_setpwd_sefecode" android:paddingLeft="12.0dip" android:paddingRight="12.0dip" android:layout_width="100.0dip" android:layout_height="40.0dip" android:minWidth="100.0dip" android:text="@string/submit_order_get_code" />
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:background="@color/white" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <EditText android:textSize="16.0sp" android:id="@id/code_edit" android:background="@drawable/pay_input_phone" android:paddingLeft="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/submit_order_code_hint" android:singleLine="true" android:digits="1234567890" android:inputType="phone" />
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:id="@id/check_picture_layout" android:background="@color/white" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <View android:background="@drawable/hen_line" android:layout_width="fill_parent" android:layout_height="0.5dip" android:layout_marginBottom="5.0dip" />
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <EditText android:textSize="16.0sp" android:id="@id/check_picture_edit" android:layout_width="0.0dip" android:layout_height="wrap_content" android:hint="@string/submit_order_check_picture" android:singleLine="true" android:layout_weight="1.0" />
            <ImageView android:layout_gravity="center_vertical" android:id="@id/check_picture_img" android:layout_width="120.0dip" android:layout_height="50.0dip" android:src="@drawable/appointment_touch_area" />
        </LinearLayout>
    </LinearLayout>
    <RelativeLayout android:id="@id/rl_noto_login" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:layout_marginRight="10.0dip">
        <TextView android:textSize="14.0sp" android:textColor="@color/orange" android:id="@id/login_tv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/submit_order_login_now" android:layout_alignParentRight="true" />
        <TextView android:textSize="14.0sp" android:textColor="@color/pay_label_text_color_light_gray" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/submit_order_had_lashou_account" android:layout_toLeftOf="@id/login_tv" android:layout_alignBaseline="@id/login_tv" />
    </RelativeLayout>
</LinearLayout>