<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <View android:background="@color/app_gray" android:layout_width="fill_parent" android:layout_height="15.0dip" />
    <RelativeLayout android:gravity="center_vertical" android:id="@id/rl_consume_date" android:paddingTop="10.0dip" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip">
        <TextView android:textSize="16.0sp" android:textColor="@color/pay_label_text_color_light_gray" android:gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/consume_date" />
        <RelativeLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentRight="true">
            <ImageView android:id="@id/iv_enter_consumedate" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="10.0dip" android:src="@drawable/arrow_right_my_gray" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
            <TextView android:textSize="16.0sp" android:textColor="@color/pay_label_text_color_light_gray" android:gravity="center_vertical" android:id="@id/tv_consume_date" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="10.0dip" android:text="@string/switch_consume_date" android:layout_toLeftOf="@id/iv_enter_consumedate" />
        </RelativeLayout>
    </RelativeLayout>
    <View android:background="@color/pay_label_text_color_light_gray" android:layout_width="fill_parent" android:layout_height="0.100000024dip" />
    <LinearLayout android:orientation="vertical" android:id="@id/ll_consume_info" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <RelativeLayout android:gravity="center_vertical" android:id="@id/rl_consume_name" android:paddingTop="10.0dip" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip">
            <TextView android:textSize="16.0sp" android:textColor="@color/pay_label_text_color_light_gray" android:gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/consumer_name" />
            <EditText android:textSize="16.0sp" android:textColor="@color/pay_label_text_color_light_gray" android:textColorHint="@color/pay_label_text_color_light_gray" android:gravity="right" android:id="@id/et_consume_name" android:background="@null" android:layout_width="wrap_content" android:layout_height="wrap_content" android:hint="@string/consumer_name_edit" android:layout_alignParentRight="true" android:textCursorDrawable="@drawable/color_cursor" />
        </RelativeLayout>
        <View android:background="@color/pay_label_text_color_light_gray" android:layout_width="fill_parent" android:layout_height="0.100000024dip" />
        <RelativeLayout android:gravity="center_vertical" android:id="@id/rl_consume_tif" android:paddingTop="10.0dip" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip">
            <TextView android:textSize="16.0sp" android:textColor="@color/pay_label_text_color_light_gray" android:gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/consumer_id" />
            <EditText android:textSize="16.0sp" android:textColor="@color/pay_label_text_color_light_gray" android:textColorHint="@color/pay_label_text_color_light_gray" android:gravity="right" android:id="@id/et_consume_tif" android:background="@null" android:layout_width="wrap_content" android:layout_height="wrap_content" android:hint="@string/consumer_id_edit" android:singleLine="true" android:maxLength="18" android:layout_alignParentRight="true" android:textCursorDrawable="@drawable/color_cursor" />
        </RelativeLayout>
        <View android:background="@color/pay_label_text_color_light_gray" android:layout_width="fill_parent" android:layout_height="0.100000024dip" />
        <RelativeLayout android:gravity="center_vertical" android:id="@id/rl_consume_phone" android:paddingTop="10.0dip" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip">
            <TextView android:textSize="16.0sp" android:textColor="@color/pay_label_text_color_light_gray" android:gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/consumer_phone" />
            <EditText android:textSize="16.0sp" android:textColor="@color/pay_label_text_color_light_gray" android:textColorHint="@color/pay_label_text_color_light_gray" android:gravity="right" android:id="@id/et_consume_phone" android:background="@null" android:layout_width="wrap_content" android:layout_height="wrap_content" android:hint="@string/consumer_phone_edit" android:maxLength="11" android:layout_alignParentRight="true" android:inputType="phone" android:textCursorDrawable="@drawable/color_cursor" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>