<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/white" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginBottom="20.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@id/coupon_layout" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:layout_marginBottom="15.0dip">
        <TextView android:textSize="@dimen/pay_label_text_size" android:textColor="@color/pay_label_text_color_light_gray" android:id="@id/coupon_label" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/submit_order_coupon" android:layout_centerVertical="true" />
        <ImageView android:id="@id/coupon_arrow_img" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:src="@drawable/arrow_right_my_gray" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
        <TextView android:textSize="@dimen/pay_label_text_size" android:textColor="@color/pay_content_text_color" android:ellipsize="end" android:gravity="right" android:id="@id/coupon_tv" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:text="@string/use_coupon" android:singleLine="true" android:layout_toLeftOf="@id/coupon_arrow_img" android:layout_toRightOf="@id/coupon_label" android:layout_centerVertical="true" />
    </RelativeLayout>
    <View android:id="@id/coupon_divider" android:background="@drawable/hen_line" android:layout_width="fill_parent" android:layout_height="0.5dip" />
    <RelativeLayout android:id="@id/balance_layout" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:layout_marginBottom="15.0dip">
        <TextView android:textSize="@dimen/pay_label_text_size" android:textColor="@color/pay_label_text_color_light_gray" android:id="@id/balance_label" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/submit_order_balance" android:layout_centerVertical="true" />
        <CheckBox android:id="@id/balance_check" android:background="@drawable/finish_radiobutton_bg_selector" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="true" android:button="@null" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
        <TextView android:textSize="@dimen/pay_label_text_size" android:textColor="@color/orange" android:ellipsize="end" android:gravity="right" android:id="@id/balance_tv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="2.0dip" android:layout_marginRight="3.0dip" android:singleLine="true" android:layout_toLeftOf="@id/balance_check" android:layout_toRightOf="@id/balance_label" android:layout_centerVertical="true" />
    </RelativeLayout>
    <View android:id="@id/balance_divider" android:background="@drawable/hen_line" android:layout_width="fill_parent" android:layout_height="0.5dip" />
    <RelativeLayout android:id="@id/balance_payed_layout" android:background="@color/white" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:layout_marginBottom="15.0dip">
        <TextView android:textSize="@dimen/pay_label_text_size" android:textColor="@color/pay_label_text_color_light_gray" android:id="@id/balance_payed_lable_tv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="余额支付:" android:layout_centerVertical="true" />
        <TextView android:textSize="@dimen/pay_label_text_size" android:textColor="@color/orange" android:id="@id/balance_payed_tv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
    </RelativeLayout>
</LinearLayout>